# please-make-me-an-app

./: .cribrc  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  build.rs  rustfmt.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
.lazyai/: 2026-05-15T1212-upgrades-and-ad-hoc-open.md
data/: adblock-domains.txt
docs/: ad-blocking.md  alternatives.md  ideas.md  known-limitations.md  research.md  rust-basics.md
examples/: claude.yaml  gmail-brave.yaml  gmail.yaml  inject-test-brave.yaml  notion.yaml  pomofocus.yaml  whatsapp.yaml  workspace-light.yaml  workspace.yaml
src/: adblock.rs  app.rs  browser.rs  config.rs  desktop.rs  icon.rs  inject.rs  main.rs  notification.rs  profile.rs  tray.rs
