[package]
name = "please-make-me-an-app"
version = "0.1.0"
edition = "2021"
description = "Turn any website into a desktop app with a YAML config file"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "6"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "ico", "jpeg", "gif", "webp"] }
notify-rust = "4"
serde_json = "1"
tao = "0.34"
gtk = "0.18"
tray-icon = "0.21"
ureq = "3"
wry = "0.54"

[lints.rust]
future-incompatible = "warn"
nonstandard-style = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
redundant_clone = "deny"
needless_collect = "warn"
large_enum_variant = "warn"

[dev-dependencies]
tempfile = "3"
